# device-connector-framework

./: Cargo.toml  README.md
base/: Cargo.toml
base/src/: file.rs  fixed_size.rs  lib.rs  null.rs  print_log.rs  process.rs  stat.rs  stdio.rs  tcp.rs  tee.rs  text.rs  udp.rs
common/: Cargo.toml  build.rs
common/include/: device_connector.h
common/src/: conf.rs  defines.rs  lib.rs  msg_buf.rs  msg_receiver.rs  msg_type.rs  pipeline.rs
dev/: Cargo.toml  dc_core.pc
lib/: Cargo.toml  build.rs
lib/include/: dc_core.h
lib/src/: channel.rs  context.rs  element.rs  lib.rs  loader.rs  log.rs  metadata.rs  msg.rs  msg_buf.rs  msg_receiver.rs  pipeline.rs  plugin.rs  process.rs  runner.rs  task.rs  utils.rs
lib/src/tests/: element.rs  mod.rs  msg.rs  plugin.rs  test_elements.rs
python/: Cargo.toml
python/src/: exec_element.rs  lib.rs  pytypes.rs  simple_executor.rs
runner/: Cargo.toml
runner/src/: env_replacer.rs  main.rs  show.rs
src/: channel.rs  close.rs  conf.rs  element.rs  error.rs  finalizer.rs  lib.rs  loaded_plugin.rs  log.rs  macros.rs  main.rs  metadata.rs  msg.rs  msg_buf.rs  msg_receiver.rs  pipeline.rs  plugin.rs  process.rs  runner.rs  task.rs  type_check.rs
src/base/: file.rs  fixed_size.rs  mod.rs  null.rs  print_log.rs  process.rs  stat.rs  stdout.rs  tcp.rs  tee.rs  text.rs  udp.rs
sys/: Cargo.toml  build.rs
sys/src/: bindings.rs  lib.rs
tests/: run_hello.rs
