[package]
name = "device-connector"
version = "2.1.0"
authors = ["okubo <okubo@aptpod.co.jp>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.deb]
depends = "$auto"
assets = [
    ["target/release/device-connector-run", "/usr/bin/device-connector", "755"],
]

[lib]
name = "device_connector"

[[bin]]
name = "device-connector-run"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = "1"
serde_derive = "1"
serde_with = "2"
serde_yaml = "0.9"
serde_json = "1"
once_cell = "1"
regex = "1"
extend = "1"
fnv = "1"
ctrlc = { version = "3", features = ["termination"] }
signal-hook = "0.3.9"
crossbeam-channel = "0.5.0"
futures = "0.3"
bytes = "1"
libloading = "0.7"
libc = "0.2"
log = "0.4"
mime = "0.3"
device-connector-common = { path = "./common" }

# Dependeincies for device-connector-run
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"

[profile.release]
panic = "abort"

[workspace]
members = [
    "common",
]
