[package]
name = "dc-core"
version = "3.0.0"
authors = ["aptpod, Inc. Products <product-support@aptpod.co.jp>", "okubo <okubo@aptpod.co.jp>"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]
name = "dc_core"

[features]
log-0_4 = []

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
log = { version = "0.4.20", features = ["std"] }
regex = "1.9.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.4.0"
serde_yaml = "0.9.30"
thiserror = "1.0.56"
once_cell = "1.19.0"
mime = "0.3.17"

sys = { path = "sys", package = "dc-core-sys" }

[workspace]
members = [
    "common",
    "base",
    "dev",
    "lib",
    "runner",
    "sys",
    "python",
]

[profile.release]
lto = true

# Build libdc_core by this profile
[profile.release-lib]
inherits = "release"
panic = "abort"
